src/objects/Business_Supplier__c.object
<CustomObject>
    <description>List of all Suppliers along with contract length, contract numbers and brief description</description>
    <fields>
        <fullName>Alternative_Vendor__c</fullName>
        <inlineHelpText>If there is an alternative vendor who we use for the service, please fill this in.</inlineHelpText>
        <label>Alternative Vendor</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_cost_for_services__c</fullName>
        <description>Please enter the contract costs for the usage of service per annum if applicable.</description>
        <inlineHelpText>Please enter the contract costs for the usage of service per annum if applicable.</inlineHelpText>
        <label>Annual cost for services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <description>Please enter a brief description of what the company services.</description>
        <inlineHelpText>Please enter a brief description of what the company services.</inlineHelpText>
        <label>Brief Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this if the following suppliers are:</description>
        <inlineHelpText>Please check this if the following suppliers are:</inlineHelpText>
        <label>Business Critical?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <description>Please enter a contract number if applicable. This maybe necessary to log a call or speak to someone with regards to an issue.</description>
        <inlineHelpText>Please enter a contract number if applicable. This maybe necessary to log a call or speak to someone with regards to an issue.</inlineHelpText>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <description>Please enter the suppliers address</description>
        <inlineHelpText>Please enter the suppliers address</inlineHelpText>
        <label>Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Phone_No_2__c</fullName>
        <label>Company Phone No 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone_No__c</fullName>
        <description>Please enter the company main phone number</description>
        <inlineHelpText>Please enter the company main phone number</inlineHelpText>
        <label>Company Phone No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <description>Please select to go to the suppliers home page.</description>
        <inlineHelpText>Please select to go to the suppliers home page.</inlineHelpText>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Date__c</fullName>
        <description>Please enter the renewal date of the contract for the services if applicable.</description>
        <inlineHelpText>Please enter the renewal date of the contract for the services if applicable.</inlineHelpText>
        <label>Contract Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Owner_s__c</fullName>
        <description>Please select the department(s) relating to this supplier.</description>
        <inlineHelpText>Please select the department(s) relating to this supplier.</inlineHelpText>
        <label>Department Owner(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>FCU</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Service__c</fullName>
        <inlineHelpText>Please select the date when the next scheduled service is due. Please leave blank if not applicable.</inlineHelpText>
        <label>Next Scheduled Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_in_Arrears__c</fullName>
        <label>Paid in Arrears</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_method__c</fullName>
        <inlineHelpText>Please enter the method of payment. e.g. BACS Invoice.</inlineHelpText>
        <label>Payment method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <description>Please select the status of the supplier. Dormant - No activity for more than 12 months.
Inactive - Do not use (If you have selected this, please enter in the description why this shouldn&apos;t be used.</description>
        <inlineHelpText>Please select the status of the supplier. Dormant - No activity for more than 12 months.
Inactive - Do not use (If you have selected this, please enter in the description why this shouldn&apos;t be used.</inlineHelpText>
        <label>Relationship_Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Inactive - Do not use!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_who_manages_this_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please select the staff member who manages this supplier/account from IBB.</description>
        <inlineHelpText>Please select the staff member who manages this supplier/account from IBB.</inlineHelpText>
        <label>User who manages this account</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Supplier</label>
    <nameField>
        <label>Business Suppliers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Suppliers</pluralLabel>
    <recordTypes>
        <fullName>IT_Supplier</fullName>
        <active>true</active>
        <label>IT Supplier</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>